Section spacing fixed to be 80px on desktop

--- a/src/assets/page.styles.scss
+++ b/src/assets/page.styles.scss
@@ -86,7 +86,10 @@ body {
 
 .content-grid + .content-grid,
 section + section  {
-  @apply pt-16;
+  @apply pt-16;              /* padding-top: 64px; */
+  @media (min-width: theme('screens.lg')) {
+    @apply pt-20;            /* padding-top: 80px; */
+  }
 }
 
 .section-divider {
